add  static-file-server

--- a/static-file-server/views/includes/footer.ejs
+++ b/static-file-server/views/includes/footer.ejs
@@ -2,15 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p>
-                    © 2018
-                    <a
-                        href="https://www.facebook.com/abhishek.kumar.9210256"
-                        target="_blank"
-                        >hello</a
-                    >
-                    All Rights Reserved
-                </p>
+                <p>© 2024 Static File Server. All Rights Reserved.</p>
             </div>
         </div>
     </div>
